# class-imbalance-testing

./: .gitignore  NDD_IMPLEMENTATION_GUIDE.md  NOTEBOOK_GUIDE.md  README_NDD.md  main.py  ndd_stroke_augmentation.py  pyproject.toml
data/: robust_scaler.pkl  stroke_data_prepared.csv  stroke_data_unscaled.csv
notebooks/: base-model.ipynb  eda.ipynb  feature-engineering.ipynb  nemo-data-designer-get-started.ipynb  nemo-data-designer-model.ipynb  nemo-data-designer.ipynb  scale-pos-weight-model.ipynb  smote-model.ipynb
